2.6 / <not released yet>

 - Fixed
   - --json and --xml didn't support having both mode and limit parameters
     defined at the same time as documented, broken since previous release


2.5 / 14-Jan-2020

 - Fixed
   - Automatic interface selection wasn't done for --traffic and --live when
     the Interface configuration setting was left empty
   - --setalias didn't do anything when used in combination with --add
   - -l / --live and -tr default to first interface instead of producing an
     error if a interface merge is requested


2.4 / 18-Aug-2019

 - Fixed
   - Daemon didn't correctly wait when acquiring database lock for data write
     which could result in unnecessary errors and even process exit if an
     external database read operation had exactly the same timing as the
     daemon write operation
   - Daemon didn't fork() even when requested to with --daemon when started
     by PID 1 (issue seen at least in Docker containers)
   - Move vnstatd man page from section 1 to section 8
 - New
   - Add --rename for renaming interfaces already existing the database


2.3 / 10-Jul-2019

 - Fixed
   - Traffic rate wasn't being shown for the last entry of most lists during
     the first update of the next period (first SaveInterval minutes of each
     new hour, day, month and year)
   - Systemd example service file could result in database file write issues
     if the used systemd version supported ProtectSystem=strict but didn't
     support StateDirectory (issue seen at least with systemd 232 in Debian 9)
   - Debian and Red Hat init.d example files had wrong path for the pid file
   - Interfaces could end up staying marked as 'disabled' in the database even
     after becoming back active and monitored, only the shown status was wrong
     without resulting in any data loss
   - Some image outputs didn't allocate enough height for the image resulting
     in the last row having less space below it than intended
 - New