@@ -56,7 +56,7 @@ Sampletime 5
 # 7 = hours, 8 = xml, 9 = one line, 10 = json
 QueryMode 0
 
-# default list output entry count (0 = all)
+# default list output entry limits (0 = all)
 List5Mins      24
 ListHours      24
 ListDays       30
